# miniuci

./: .rgignore  LICENSE  README.md  compile  miniuci.cabal  pyproject.toml  settings.json  ui-refactor.md
app/MiniUCI/: Chess.hs
miniuci/: __main__.py  app.py  assets.py  config.py  engine.py  graphics.py  resources.py  settings.py
miniuci/graphics/: __init__.py  activebar.py  board.py  evalbar.py  interface.py
miniuci/ui/: __init__.py  blank.py  board.py  evalbar.py  status.py
miniuci_refactor/: __main__.py  clock.py  ui.py
second_refactor/: __main__.py  draw.py
