cabal-version:      3.0
name:               miniuci
version:            0.1.0.0
synopsis:           UCI chess GUI written in Haskell
-- description:
homepage:           https://github.com/eggsontoast1672/miniuci
license:            MIT
license-file:       LICENSE
author:             Paul Zupan
maintainer:         paul.zupan.13@gmail.com
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable miniuci
    import:           warnings
    main-is:          Main.hs
    other-modules:    MiniUCI.Chess
    -- other-extensions:
    build-depends:
        base ^>=4.18.3.0
      , array ^>=0.5.8.0
    hs-source-dirs:   app
    default-language: Haskell2010
